# X-BRIDGE-RUST

./: Cargo.toml  README.md
config/: config.json
scripts/: deploy.sh  get_remote_repo.sh
src/: api_doc.rs  app.rs  docs.rs  lib.rs  main.rs
src/api/: health.rs  users.rs
src/core/: config.rs  error.rs  mod.rs  path.rs
src/routers/api/: health.rs  mod.rs  users.rs
src/routers/pages/: home.rs  mod.rs  static_files.rs  templates.rs
src/schemas/: health.rs  users.rs
src/services/: health_service.rs  mod.rs  user_service.rs
src/static/css/: app.css
src/templates/: base.html  home.html
src/templates/includes/: _devices.html  _events.html  _tags.html  _tags_all.html  _tags_gtin.html  alerts.html  footer.html  header.html
src/templates/pages/index/: main.html
src/templates/pages/logs/: main.html
src/templates/pages/protected_page/: main.html
src/templates/pages/write_page/: main.html
src/web/: home.rs  mod.rs  templates.rs
templates/: base.html
templates/includes/: header.html
