[package]
name = "x_bridge_rust"
version = "0.1.3"
edition = "2024"

[dependencies]
axum = "0.8"
minijinja = "2.12"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6", features = ["fs"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }

serde_json = "1"

webbrowser = "0.8"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
